# locust-mcp

./: README.md  jsonplaceholder_test.py  locust_mcp_server.py  pyproject.toml  requirements.txt  setup.py  start_server.py  test_client.py  test_client_run.py  test_curl.yaml  test_curl_verify.py  test_verify_generator.py  verify_generated_test.py  verify_test.py
src/: run_server.py
src/locust_mcp/: __init__.py  __main__.py  locust_generator.py  prompt_generator.py  server.py  test_runner.py  test_store.py
src/locust_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_cases.csv
