[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "locust-mcp"
version = "0.1.0"
description = "MCP server for generating and running Locust load tests"
requires-python = ">=3.8"
dependencies = [
    "locust>=2.15.1",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "websockets>=11.0.3",
    "pydantic>=2.0.0"
]
